# setroubleshoot

./: .gitlab-ci.yml  Makefile.am  NEWS  README.md  README.translations  TODO  configure.ac  org.fedoraproject.Setroubleshootd.service  org.fedoraproject.sealert.service  org.fedoraproject.setroubleshoot.metainfo.xml  setroubleshoot.appdata.xml  setroubleshoot.desktop.in  setroubleshootd.service
doc/: audit_notes.txt  developers_guide.wiki  sealert.8  setroubleshootd.8  user_faq.wiki
gui/: Makefile.am  browser.glade  bug_report.glade  fail_dialog.glade  success_dialog.glade
po/: POTFILES.skip  ar.po  as.po  bg.po  bn.po  bn_IN.po  ca.po  cs.po  da.po  de.po  el.po  en_GB.po  es.po  eu.po  fi.po  fr.po  fur.po  gl.po  gu.po  he.po  hi.po  hr.po  hu.po  it.po  ja.po  ka.po  kn.po  ko.po  mai.po  ml.po  mr.po  ms.po  nb.po  nds.po  nl.po  nn.po  or.po  pa.po  pl.po  pt.po  (+14 more)
src/: Makefile.am  SetroubleshootFixit.py  SetroubleshootPrivileged.py  config.py.in  sealert  seapplet  sedbus.c  sedbus.h  sedispatch.c  setroubleshootd  setup.py
src/setroubleshoot/: audit_data.py  server.py  util.py
test/: README.testing
